--- a/css/style.css
+++ b/css/style.css
@@ -87,6 +87,19 @@ nav:hover+ul, nav ul.nav_menu:hover{
 
 body{
 	background-color: cyan;
+	background-image: url("../images/BackgroundImage.jpg");
+	background-repeat: no-repeat;
+	background-size: cover;
+}
+
+section{
+	text-align: center;
+	margin-left: 20%;
+	margin-right: 20%;
+	background: rgba(2, 114, 122, 0.5);
+	font-size: 2em;
+	border: 3px solid black;
+	border-style: solid;
 }
 
 footer{
